Fixes to menu selected and OsScrollbar

--- a/Ambiance/gtk-3.0/gtk-widgets.css
+++ b/Ambiance/gtk-3.0/gtk-widgets.css
@@ -510,12 +510,17 @@ GtkSwitch.trough:active {
 }
 
 /* menu */
+
 .menu {
     padding: 0;
     background-image: none;
     background-color: @dark_bg_color;
     border-color: shade (@dark_bg_color, 0.9);
     color: @dark_fg_color;
+}
+
+.menu:selected {
+    background-color: @selected_bg_color;
 }
 
 /* menubar */
@@ -612,6 +617,17 @@ GtkSwitch.trough:active {
     background-image: -gtk-gradient (linear, left top, left bottom,
                                      from (shade (@theme_bg_color, 1.1)),
                                      to (shade (@theme_bg_color, 1.02)));
+}
+
+/* OsScrollbar */
+OsThumb:selected,
+OsScrollbar:selected {
+   background-color: @theme_selected_bg_color;
+}
+
+OsThumb:active,
+OsScrollbar:active {
+   background-color: shade (@theme_bg_color, 0.6);
 }
 
 /* Scrollbars */
